tailor-is/deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tailor-is-prod
  labels:
    name: tailor-is-prod
    environment: production
    managed-by: kubectl
